# commitgen-project

./: LICENSE.txt  README.md  git_ai_commit.py  pyproject.toml
Philosopher/: README.md
Philosopher/philo/: Makefile  monitor.c  philo.c  philo.h  run_simulation.c  utils_1.c  utils_2.c  utils_3.c
Philosopher/philo_bonus/: Makefile  clean.c  ft_atoi.c  ft_itoa.c  ft_strjoin.c  ft_strlen.c  init_philos.c  init_stuff.c  monitor.c  one_philo.c  philo_bonus.c  philo_bonus.h  run_simulation.c  utils_1.c  utils_2.c  wait_child.c
commitgen/: __init__.py  __main__.py  ai_helpers.py  ai_utils.py  banners.py  cli.py  commit.py  config.py  editor.py  exceptions.py  git_helpers.py  git_utils.py  interaction.py  signals.py  utils.py
