[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "commitgen"
version = "0.1.0"
description = "AI-powered Git commit generator"
authors = [{ name = "Yahya Jaafar" }]
requires-python = ">=3.9"
dependencies = [
    "gitpython>=3.1.43",
    "google-generativeai>=0.8.3",
]

[project.scripts]
commitgen = "commitgen.__main__:main"
git-commitgen = "commitgen.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["commitgen*"]

